--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.12.4",
+    "cookie-parser": "^1.3.4",
+    "errorhandler": "^1.3.4",
     "express": "^4.12.3",
+    "express-session": "^1.11.2",
     "jade": "^1.9.2",
+    "method-override": "^2.3.3",
     "mongodb": "^1.4.37",
     "mongoskin": "^1.4.13",
+    "morgan": "^1.5.3",
     "stylus": "^0.51.1"
   },
   "devDependencies": {
